--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^1.19.1",
+    "tailwindcss": "^1.4.6",
     "vue-template-compiler": "^2.6.11"
   }
 }
